# -Team-43-INF2004-Project

Drivers/Motor Control/: motor_control.c
Drivers/ir_sensor/: CMakeLists.txt  ir_sensor.c
Drivers/magnometer/: CMakeLists.txt  magnometer.c
Drivers/ultrasonic/: CMakeLists.txt  ultrasonic.c
Drivers/wifi/: CMakeLists.txt  FreeRTOSConfig.h  wifi.c
Motor Control/: CMakeLists.txt  motor_control.uf2
ir_sensor/: CMakeLists.txt  ir_sensor.c
magnometer/: CMakeLists.txt  magnometer.c
motor_controller/: CMakeLists.txt  motor_control.c
motor_controller_merged/: motor_control.c
motor_encoder_barcode/: CMakeLists.txt  code39_barcode.h  motor_encoder_barcode.c
motor_encoder_barcode_merged/: motor_setup.h
motor_encoder_barcode_ultra_merged/: code39_barcode.h  motor_encoder_barcode.c  motor_setup.h  ultra_encoder.h
wheel_encoder/: CMakeLists.txt  wheel_encoder.c
wifi/: CMakeLists.txt  wifi.c
